--- a/ala.html
+++ b/ala.html
@@ -27,7 +27,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/ala1.jpg" class="d-block w-100" alt="...">
+            <img src="images/ala1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Marari Beach</h5>
               <p>One of the great delights of the Malabar Coast, the Marari Beach is an idyllic serene beach. About 11 km from the city of Alleppey, this beach is a hotspot for fishing activity, deriving its name from the local fishing village Mararikulam.
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/ala2.png" class="d-block w-100" alt="...">
+            <img src="images/ala2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Alappuzha Beach</h5>
               <p> The Alappuzha beach, also known as the Alleppey Beach, is famous for local getaways, its intrinsic beauty and a 150 years old pier which stretches into the sea. Relaxing under the palm groves and picnicking beside the beach are fantastic options available to those visiting the beach. Alleppey Beach is a host to many festivals like Sand Art festival and Alappuzha Beach Festival.
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/ala3.jpg" class="d-block w-100" alt="...">
+            <img src="images/ala3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Ambalappuzha Sree Krishna Temple</h5>
               <p>Ambalapuzha Sree Krishna Temple is a Hindu temple dedicated to Lord Krishna situated in Alappuzha district. Built-in the traditional Kerala style architectural pattern, the temple is famous for its delicious rice pudding prepared in sweet milk, popularly known as Pal Payasam.</p>
