--- a/kannur.html
+++ b/kannur.html
@@ -27,14 +27,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/kannur1.jpg" class="d-block w-100" alt="...">
+            <img src="images/kannur1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Payyambalam Beach</h5>
               <p>The impeccably unspoilt Payyabalam beach is adorned with sparkling pearls of golden sand and foamy white waves of the Arabian Sea. The highlight of Kannur and one of the many beautiful beaches of Kerala, it has an incredibly peaceful and inviting aura.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/kannur2.jpg" class="d-block w-100" alt="...">
+            <img src="images/kannur2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Muzhapilangad Beach</h5>
               <p> The Muzzhapilangad Drive-in Beach at Kannur is one referred to with many superlatives- as the longest drive-in beach in the whole of India, as one of the cleanest beaches of Kannur and most importantly, as one of the best drive-in beaches that the entire Asian continent has to offer.
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/kannur3.jpg" class="d-block w-100" alt="...">
+            <img src="images/kannur3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>St Angelo Fort</h5>
               <p>St Angelo's Fort is definitely one of the most popular and frequently visited attractions of Kannur and for more reasons than one. The polished yet prehistoric structure of this fortress oozes with unadulterated elegance and overwhelming power. Standing ashore in the Arabian sea, it enjoys a panoramic and unobstructed view of the diorama created by the merger of the magnetic waves and the azure waters. It also overlooks the mesmerising Mopilla Bay, a natural harbour.</p>
