--- a/kollam.html
+++ b/kollam.html
@@ -27,14 +27,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/kollam1.webp" class="d-block w-100" alt="...">
+            <img src="images/kollam1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Ashtamudy Lake</h5>
               <p>Known locally as Ashtamudi Kaayal, this is one of the largest backwaters in Kerala. Tourists worldwide flock to this beautiful destination to enjoy a boat ride and take in the stunning views. In addition, one can relish local cuisine at one of the many small family-run restaurants dotted across the villages surrounding the lake.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/kollam2.webp" class="d-block w-100" alt="...">
+            <img src="images/kollam2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Kollam Beach</h5>
               <p> This spectacular beach is also known as the Mahatma Gandhi beach and is home to a sprawling park. The Mahatma Gandhi Beach is one of the most beautiful places to visit in Kollam. In addition, this beach is one of the first beaches to play host to couples’ destination weddings from across the country.
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/kollam3.webp" class="d-block w-100" alt="...">
+            <img src="images/kollam3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Jadayu</h5>
               <p>This wonderful attraction perched on a hilltop is one of the best places to visit in Kerala. This magnificent tourist attraction is named after the vulture that is mentioned in the epic Ramayana. While the demon king Ravan of Lanka was abducting Goddess Sita, wife of Lord Sri Ram, Jatayu the vulture, tried to stop Ravan and lost his life while doing so.</p>
