--- a/kozhikode.html
+++ b/kozhikode.html
@@ -27,14 +27,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/kozhi1.jpg" class="d-block w-100" alt="...">
+            <img src="images/kozhi1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Backwaters</h5>
               <p>Spread across long stretches of the Arabian water, these beguiling backwater lagoons are a sight to withhold. However, they are well known for its cruises on houseboats which offer an enthralling experience.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/kozhi2.jpg" class="d-block w-100" alt="...">
+            <img src="images/kozhi2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Kozhippara Falls</h5>
               <p> Easily accessible by roads, Kozhippara Falls are situated on the borders of Kakkadampoyil on the Malappuram -Calicut District divide in Malappuram district. Providing a stunning sight, these falls are best known for its swimming, bird watching and jungle trekking. Also known as Kakkadampoyil Waterfall, the Kozhippara waterfall is located on Kuthradampuzha river area.
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/kozhi3.jpg" class="d-block w-100" alt="...">
+            <img src="images/kozhi3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Thusharagiri Waterfalls</h5>
               <p>Lying in the Western Ghats of Kozhikode district in Kerala, Thusharagiri Fall cascades down as three waterfalls. Located in a small tribal village, the name of the falls means ???snow covered mountains'.</p>
