--- a/thrissur.html
+++ b/thrissur.html
@@ -27,14 +27,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/thri1.jpg" class="d-block w-100" alt="...">
+            <img src="images/thri1.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Athirapally Waterfalls</h5>
               <p>Located 60 km from Thrissur city, Athirapally Falls is a haven for flora and fauna alike. It is a popular picnic spot and the scenic beauty of the waterfall offers spectacular visuals for visitors.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/thri2.jpg" class="d-block w-100" alt="...">
+            <img src="images/thri2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Charpa Falls</h5>
               <p> Charpa Falls is another one of the nature's delight that displays the blessings of Mother Nature. Cascading down from a shot height, this fall which is a part of River Chalakkudy offers a breathtaking experience. Athirappilly Falls and Lake Vachumaram are a stone's throw away from Charpa Falls.
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/thri3.jpg" class="d-block w-100" alt="...">
+            <img src="images/thri3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Vadakummnathan Temple</h5>
               <p>With a collection of beautiful Mural paintings, some of which are more than 400 years old, this gigantic 1000 year old temple and historical structure is famous for the Nataraja Mural near the main gate.</p>
