--- a/district.html
+++ b/district.html
@@ -74,7 +74,7 @@
             width: 200px;
         }   
         body{
-            background-color: #86e4a5;
+            background-image: linear-gradient(to top, #4fb576 0%, #44c489 30%, #28a9ae 46%, #28a2b7 59%, #4c7788 71%, #6c4f63 86%, #432c39 100%);
         }
     </style>
 </head>
