--- a/tvm.html
+++ b/tvm.html
@@ -27,14 +27,14 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/tvm1.avif" class="d-block w-100" alt="...">
+            <img src="images/tvm1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Padmanabhaswamy Temple</h5>
               <p>The principal deity is Padmanabhaswamy, who is enshrined in the "Anantha Shayana" posture, the eternal yogic sleep on the infinite serpent Adi Shesha. Padmanabhaswamy is the tutelary deity of the Travancore royal family. The titular Maharaja of Travancore, Moolam Thirunal Rama Varma, is the current trustee of the temple.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/tvm2.avif" class="d-block w-100" alt="...">
+            <img src="images/tvm2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Kovalam Beach</h5>
               <p> Kovalam is an internationally renowned beach with three adjacent crescent beaches. It has been a favourite haunt of tourists since the 1930s. A massive rocky promontory on the beach has created a beautiful bay of calm waters ideal for sea bathing.
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/tvm3.avif" class="d-block w-100" alt="...">
+            <img src="images/tvm3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Mountains</h5>
               <p>A mountain is an elevated portion of the Earth's crust, generally with steep sides that show significant exposed bedrock. Although definitions vary, a mountain may differ from a plateau in having a limited summit area, and is usually higher than a hill, typically rising at least 300 metres.</p>
